[package]
name = "loc"
version = "0.6.0"
description = "Count lines of code (cloc) fast."
authors = ["Curtis Gagliardi <curtis@curtis.io>"]

repository = "https://github.com/cgag/loc"
homepage = "https://github.com/cgag/loc"
documentation = "https://github.com/cgag/loc"

license = "MIT"
edition = "2021"

[dependencies]
deque = { version = "0.3.2", optional = true }
memchr = "2.4.1"
regex = { version = "1.5.4", optional = true }
num_cpus = { version = "1.13.1", optional = true }
ignore = { version = "0.4.18", optional = true }
edit-distance = { version = "2.1.0", optional = true }
smallvec = "1.8.0"

[dependencies.clap]
version = "3.2"
features = ["cargo"]
optional = true

[features]
default = ["build-binary"]
build-binary = ["clap", "deque", "regex", "num_cpus", "ignore", "edit-distance"]

[profile.release]
incremental = false
lto = true

[[bin]]
name = "loc"
required-features = ["build-binary"]
